fix overflowY to overflow-y

--- a/src/containers/index.scss
+++ b/src/containers/index.scss
@@ -14,7 +14,7 @@ html, body {
 
 .mainContainer {
   flex: 1;
-  overflowY: auto;
+  overflow-y: auto;
   padding: 1.8rem;
 }
 .sidebar{
